syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package ott.service.v1;
option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service OTTService {
  rpc ArcsAllow (ArcsAllowReq) returns (ArcsAllowReply);
}

message ArcsAllowReq {
  repeated int64 aids = 1 [(gogoproto.moretags)='validate:"max=100,dive,gt=0,required"'];
}

message ArcsAllowReply {
  map<int64, bool> items = 1;
}
